--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.8.2",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
@@ -28,6 +29,7 @@
     "dotenv": "^16.5.0",
     "env-var": "^7.5.0",
     "express": "^4.20.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3"
   }
 }
